# lexora

./: .gitattribute  .gitattributes  .gitignore  ALIGNMENT_FIX_QUICK_REFERENCE.md  AOI_VS_PARAGRAPH_ANALYSIS.md  CALIBRATION_SYSTEM_REPORT.md  CODE_COMPARISON_BEFORE_AFTER.md  CONTRIBUTING.md  PR57_CALIBRATION_REFACTOR_TRACKER.md  README.md  SCALE_REPLICA_IMPLEMENTATION.md  VISUALIZER_ALIGNMENT_FIXES.md  VISUALIZER_MISMATCH_REPORT.md  YAXIS_LINE_SNAPPING_DATAFLOW.md  YAXIS_LINE_SNAPPING_DEBUG.md  YAXIS_LINE_SNAPPING_IMPLEMENTATION.md  YAXIS_LINE_SNAPPING_QUICK_REF.md  package.json  patch_eye.py  setup.md  test_idt_algorithm.py  test_pipeline.py
ml-service/: .dockerignore  .env.example  API.md  Dockerfile  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  server.py  test_json_keys.py  test_predict.py
ml-service/app/: __init__.py  api.py  config.py
ml-service/app/core/: __init__.py  exceptions.py  lifespan.py  middleware.py
ml-service/app/routers/: __init__.py  debug.py  gamified.py  health.py  predict.py  predict.py.patch
ml-service/app/schemas/: __init__.py  errors.py  examples.py  gamified.py  gaze.py  health.py  prediction.py  prediction.py.patch  utils.py  webcam.py
ml-service/app/services/: __init__.py  feature_engineer.py  model_service.py
ml-service/models/: dyslexia-profile-model.h5  scaler.pkl
ml-service/models/eye-tracker/: dyslexia-profile-model.h5  scaler.pkl  (+1 more)
ml-service/tests/: conftest.py  test_endpoints.py  test_eye_tracker_features.py  test_eye_tracker_prediction.py  test_feature_engineer.py  test_model_service.py  test_predict.py  test_schemas.py  test_webcam_features.py  test_webcam_prediction.py
(+510 files in other folders)
